# minic

./: .gitignore  README.md  minic.cabal  vvv.cabal
app/: Ast.hs  CompilerPipeline.hs  Env.hs  Ir.hs  Main.hs  Mir.hs  Parser.hs  ParserCombinators.hs  Pipeline.hs  Scope.hs  SymbolTable.hs  Token.hs  TypeCheck.hs  TypeSystem.hs  X86.hs
app/Ast/: Lenses.hs  Parse.hs  Recursion.hs  Semant.hs  Types.hs
app/CLI/: Commands.hs  Executor.hs
app/Mir/: Allocation.hs  CopyPropagation.hs  Interference.hs  Lenses.hs  Liveness.hs  Recursion.hs  Translate.hs  Types.hs
app/SymbolTable/: Lenses.hs  Types.hs
app/X86/: Translate.hs  Types.hs
examples/: Makefile  print_char.asm  print_char.s  test  test.asm  test.c  test.s
minic/: dune-project  minic.opam
minic/examples/: main.mc
minic/test/: dune
src/: Ast.hs  SymbolTable.hs
src/Ast/: Lenses.hs  Parse.hs  Semant.hs  Types.hs
src/Ast/Semant/: Expressions.hs  State.hs  Statements.hs
src/Mir/: Interference.hs  Lenses.hs  Translate.hs
src/SymbolTable/: Lenses.hs  Types.hs
src/X86/: Translate.hs
test/: test.vvv
vvv/: vvv.cabal
vvv/app/: Ast.hs  Env.hs  Ir.hs  Main.hs  Mir.hs  Parser.hs  Scope.hs  TypeCheck.hs
vvv/examples/: test.c
