cabal-version:      3.0
name:               minic
version:            0.1.0.0
license:            BSD-3-Clause
license-file:       LICENSE.md
author:             Ricardo Maurizio Paul
maintainer:         memaurifu14@hotmail.com
category:           Language
build-type:         Simple

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  Ast.Parse
                    Ast.Semant 
                    Ast.Types
                    Ast.Lenses
                    SymbolTable 
                    SymbolTable.Lenses
                    SymbolTable.Types
                    Mir.Translate
                    Mir.Types
                    Mir.Liveness
                    Mir.Interference
                    Mir.Allocation
                    Mir.CopyPropagation
                    Mir.Lenses
                    X86.Translate
                    X86.Types
                    TypeSystem
                    Pipeline
                    CompilerPipeline

    other-modules:    Ast.Semant.State
                    , Ast.Semant.Expressions
                    , Ast.Semant.Statements

    default-extensions: Strict

    -- Other library packages from which modules are imported.
    build-depends:    base >= 4.17
                        , containers >= 0.6
                        , parsec >= 3.1
                        , mtl >= 2.3
                        , lens >= 5.3
                        , recursion-schemes >= 5.2

    other-modules:
    hs-source-dirs:   src
    default-language: GHC2021

executable minic
    import:           warnings
    main-is:          Main.hs
    other-modules:    CLI.Commands
                    , CLI.Executor
    default-extensions: Strict
    build-depends:    base >= 4.17
                        , optparse-applicative >= 0.19
                        , containers >= 0.6
                        , minic
    hs-source-dirs:   app
    default-language: GHC2021
